# lp-sparsemap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_flags.txt  pyproject.toml  setup.py
.github/workflows/: wheels.yaml
ad3qp/: CMakeLists.txt
ad3qp/ad3/: Factor.cpp  Factor.h  FactorDense.h  FactorGraph.cpp  FactorGraph.h  GenericFactor.cpp  GenericFactor.h  MultiVariable.h  Utils.cpp  Utils.h
dysparsemap/: CMakeLists.txt  README
dysparsemap/include/: sparsemap.h
dysparsemap/src/: sparsemap.cpp
examples/: constrained_tree.py  matching.py  pair_seq.py  sequence.py
lpsmap/: __init__.py  config.py  sparsemap_fw.py  test.py  test_budget.py
lpsmap/ad3ext/: DependencyDecoder.cpp  DependencyDecoder.h  FactorSequence.h  FactorSequenceBudget.h  FactorTreeTurbo.h  factor_sequence.cpp  factor_sequence.pyx  sequence.cpp  sequence.pxd  sequencebudget.cpp  sequencebudget.pxd  sequencebudget.pyx  tree.cpp  tree.pxd  tree.pyx
lpsmap/ad3qp/: base.cpp  base.pxd  base.pyx  factor_graph.cpp  factor_graph.pxd  factor_graph.pyx
lpsmap/api/: api.py  autograd.py  factors.py  factors_extension.py
lpsmap/core/include/ad3/: Factor.h  FactorDense.h  FactorGraph.h  GenericFactor.h  MultiVariable.h  Utils.h
lpsmap/newad3/: api.py  autograd.py  factors.py
lpsmap/tests/: check_logic_grad.py  fw.py  make_edge_cases.py  test_basic.py  test_logic_factors.py  test_map.py  test_torch_autograd.py
test/: test_logic.cpp  test_logic_pair.cpp  test_max_iter.cpp  test_pair.cpp  test_potts.cpp  test_run.cpp
